# FANWS

./: .env.example  .gitignore  AAWT_INTEGRATION.md  BACKEND_FEATURES_ANALYSIS.md  CI_CONFIGURATION_STATUS.md  COMPLETE_SUMMARY.md  COMPLETION_SUMMARY.md  COMPREHENSIVE_TESTING_GUIDE.md  DIRECTORY_CLEANUP_SUMMARY.md  DOCUMENTATION_UPDATE_REPORT.md  FANWS.code-workspace  FANWS_USER_TESTING_COMPLETE.md  FINAL_STATUS_REPORT.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_OLD.md  IMPORT_FIXES_REPORT.md  METADATA_POPULATION_REPORT.md  PHASE_1_COMPLETION_REPORT.md  PRODUCTION_CERTIFICATION_COMPLETE.md  PRODUCTION_READINESS_CERTIFICATION.md  README.md  REVIEW_COMPLETE.md  SOLUTION_VERIFICATION.md  TESTING_CAMPAIGN_COMPLETION_REPORT.md  VERIFICATION_SUMMARY.md  WORKSPACE_ORGANIZATION.md  aawt.py  analytics.db  analyze_and_fix_imports.py  backup_fanws.ps1  cache_diagnostic.py  check_all_schemas.py  comprehensive_import_fixer.py  comprehensive_testing_launcher.py  directory_cleanup_comprehensive.py  fanws.db  fanws.py  final_validation.py  fix_imports.py  launch_testing.ps1  (+22 more)
.github/workflows/: tests.yml
archive_old_tests/: api_manager.py  demo_gui.py  gui_function_demo.py  template_manager.py  test_comprehensive_gui.py  test_gui_functions.py  test_mainwindow.py
bug_reports/reports/: bug_20250803_040301_-5444086544353529987.json  bug_20250803_040303_-7548580952705784923.json  bug_20250803_040503_3483231996834172387.json  bug_20250803_040504_7655265658414083749.json  bug_20250803_040531_-5541622310385207074.json  bug_20250803_040533_7085832187142892879.json
cache/: api_cache.db
collaboration_data/: Test 2_collaboration.json
config/: app_config.json  default_config.json  development.json  fanws.db  production.json  snapshot_1754170395.json  snapshot_1754170615.json  snapshot_1754170629.json  snapshot_1754174814.json  snapshot_1754174926.json  snapshot_1754175218.json  snapshot_1754175303.json  snapshot_1754175654.json  snapshot_1754175947.json  snapshot_1754176756.json  snapshot_1754177631.json  snapshot_1754177823.json  snapshot_1754177970.json  snapshot_1754183638.json  snapshot_1754184550.json  snapshot_1754184598.json  snapshot_1754184611.json  snapshot_1754184704.json  snapshot_1754184724.json  snapshot_1754184755.json  snapshot_1754184762.json  snapshot_1754185004.json  snapshot_1754185015.json  testing.json  user_settings.json
docs/: AI_INTEGRATION_ARCHITECTURE.md  AI_VALIDATION_REPORT.md  AUTOMATED_NOVEL_GUIDE.md  README.md  VISUAL_GUIDE.md
docs/archive/: ADVANCED_FEATURES_GUIDE.md  ADVANCED_FEATURES_SUMMARY.md  BACKUP_GUIDE.md  COMPREHENSIVE_AUDIT_REPORT.md  COMPREHENSIVE_GUI_COMPLETION_REPORT.md  COMPREHENSIVE_IMPROVEMENT_PLAN.md  COMPREHENSIVE_TESTING_SUMMARY.md  CRITICAL_ISSUES_RESOLUTION_REPORT.md  DIRECTORY_ORGANIZATION_PLAN.md  DIRECTORY_REORGANIZATION_COMPLETE.md  ENHANCED_FEATURES_SUMMARY.md  GUI_IMPLEMENTATION_COMPLETE.md  HIERARCHICAL_NAVIGATION_IMPLEMENTATION_COMPLETE.md  HIERARCHICAL_NAVIGATION_LIVE_SUCCESS_REPORT.md  IMPLEMENTATION_COMPLETE.md  IMPORT_ANALYSIS_FINAL_SUMMARY.md  IMPORT_REPAIR_COMPLETE.md  IMPORT_SYSTEM_REPAIR_FINAL_REPORT.md  METHOD_RESTORATION_SUMMARY.md  PHASE_1_COMPLETION_REPORT.md  PLUGIN_SYSTEM_INTEGRATION_COMPLETE.md  PROBLEM_RESOLUTION_COMPLETE.md  TESTING_IMPLEMENTATION_SUMMARY.md  TESTING_LOG_ANALYSIS_COMPREHENSIVE.md  TESTING_LOG_ANALYSIS_REPORT.md  ULTIMATE_ORGANIZATION_COMPLETE.md  USER_TESTING_GUIDE.md  WORKFLOW_INTEGRATION_COMPLETE.md  actions_campaign_1754171406.json  actions_campaign_1754171412.json  actions_campaign_1754171476.json  actions_campaign_1754171515.json  error_tracking.json  missing_methods.txt  (+5 more)
metadata/: CHANGELOG.md  database_schema_guide.md  log.txt  system_information.json  template_collections.db  template_recommendations.db  template_usage_guide.md  template_versions.db
plugins/: README.md  manager_config.json  sample_content_generator.py  sample_workflow_step.py
scripts/: fix_init_files.py  simple_import_fixer.py
src/: __init__.py  ai_provider_abstraction.py  analytics_system.py  api_manager.py  async_operations.py  error_handling_system.py  file_operations.py  main_gui.py  memory_manager.py  module_compatibility.py  per_project_config_manager.py  performance_monitor.py  permissions_system.py  plugin_system.py  plugin_workflow_integration.py  project_utils.py  prompt_engineering_tools.py  text_processing.py  utils.py  workflow_manager.py  writing_components.py
templates/: __init__.py
tests/: conftest.py
user_testing_logs/: user_testing_1.db  user_testing_2.db  user_testing_3.db  user_testing_comprehensive_1754174206.db  user_testing_report_1.json  user_testing_report_2.json  user_testing_report_3.json  user_testing_report_comprehensive_1754174206.json  user_testing_report_test_session.json  user_testing_summary_1.md  user_testing_summary_2.md  user_testing_summary_3.md  user_testing_summary_comprehensive_1754174206.md  user_testing_summary_test_session.md  user_testing_test_session.db
(+180 files in other folders)
